# cpd

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  test.yml
src/: config.rs  hash_file.rs  main.rs
testdata/: file1.txt  file2.txt
