[package]
name = "cpd"
description = "Copy/Paste detection for source code"
readme = "README.md"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
globset = "0.4.10"
hex = "0.4.3"
ignore = "0.4.20"
itertools = "0.10.5"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"

[profile.release]
lto = "thin"
opt-level = 2
